# advent-of-code

./: Cargo.toml  README.md  new_day.py
src/Day1/: README.md  task1.rs  task2.rs
src/Day2/: README.md  task1.rs  task2.rs
src/Day3/: task1.rs  task2.rs
src/Day4/: task1.rs  task2.rs
src/Day5/: task1.rs  task2.rs
src/Day6/: README.md  task1.rs  task2.rs
src/Day7/: README.md  task1.rs  task2.rs
src/Day8/: README.md  task1.rs  task2.rs
