[package]
name = "AdventOfCode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1-task1"
path = "src/Day1/task1.rs"

[[bin]]
name = "day1-task2"
path = "src/Day1/task2.rs"

[[bin]]
name = "day2-task1"
path = "src/Day2/task1.rs"

[[bin]]
name = "day2-task2"
path = "src/Day2/task2.rs"

[[bin]]
name = "day3-task1"
path = "src/Day3/task1.rs"

[[bin]]
name = "day3-task2"
path = "src/Day3/task2.rs"

[[bin]]
name = "day4-task1"
path = "src/Day4/task1.rs"

[[bin]]
name = "day4-task2"
path = "src/Day4/task2.rs"

[[bin]]
name = "day5-task1"
path = "src/Day5/task1.rs"

[[bin]]
name = "day5-task2"
path = "src/Day5/task2.rs"

[dependencies]
regex = "1.5.4"
itertools = "0.10.5"
